recursion.cons.min.Min.scala.error
Erreur de compilation :
Min:7: error: Int does not take parameters
  var min:Int = min(l.tail);
                   ^