recursion.cons.min.Min.scala.code
def min(l:List[Int]): Int = {
  if(l==Nil){
    return -1;
  }
  
  var min:Int = min(l.tail);
  if(min<l.head){
    return min;
  }else{
    return l.head;
  }
  
}